# DEEP-LEARNING-FOR-COMPUTER-VISION-AND-NLP

./: pyproject.toml
homework/: dz_topic_04_ZubchykMM.ipynb  dz_topic_10_ZubchykMM.ipynb
homework/models/: best_cnn.pth
notebooks/: Module_1_Lecture_2_Class.ipynb  Module_2_Lecture_3_Class.ipynb  Module_2_Lecture_4_Class.ipynb  Module_3_Lecture_5_Class.ipynb  Module_3_Lecture_6_Class.ipynb  Module_4_Lecture_7_Class.ipynb  Module_4_Lecture_7_Class_kaggle.ipynb  Module_4_Lecture_8_Class.ipynb  Module_5_Lecture_10_Class.ipynb  Module_5_Lecture_9_Class.ipynb  Module_6_Lecture_11_Class.ipynb  Module_6_Lecture_12_Class.ipynb  Module_7_Lecture_13_Class_kaggle.ipynb
practice/: 6-fruts-vgg16.ipynb  AE_MNIST.ipynb  AE_MNIST_noise.ipynb  Lecture_1-2_logistic_regression.ipynb  ae-mnist.ipynb  autocode.ipynb  hw-3-m.ipynb  hw-6-m-cnn.ipynb  hw-detection.ipynb  lr-5-ksvd-resnet-50.ipynb  sub_6_Fruts_CNN.ipynb  task_2_logistic_regression.ipynb  task_3_logistic_regression.ipynb
