[project]
name = "deep-learning-for-computer-vision-and-nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykola Zubchyk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "kagglehub (>=0.3.12,<0.4.0)",
    "torch (>=2.3.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "ultralytics (>=8.3.120,<9.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
